# lab1kurs2

./: CMakeLists.txt  application.cpp  application.h  array.cpp  array.h
